<resources>
  <string name="SignInButton">Connect</string>
  <string name="SignInButton_In">to</string>
  <string name="SignInInformation">Sign In</string>
  <string name="SigningIn">Logging in …</string>
  <string name="NoServerSelected">Please select a server</string>
  <string name="NoPasswordEnter">Please enter your password</string>
  <string name="SpecialCharacters">Special characters are not allowed.</string>
  <string name="AccountNameInvalid">Only alphanumeric characters and spaces are allowed in the account name</string>
  <string name="AccountServerInvalid">Invalid server address</string>
  <string name="AccountServerForbidden">This server URL is not allowed</string>
  <string name="AccountUsernameInvalid">Only alphanumeric characters, dashes, underscores, dots and pluses are allowed in the username</string>
  <string name="AccountPasswordInvalid">Blanks are not allowed in the password</string>
  <string name="Connected">Connected</string>
  <string name="LastLoginDate">Last login</string>
  <string name="UserNameCellTitle">Username</string>
  <string name="PasswordCellTitle">Password</string>
  <string name="Language">Language</string>
  <string name="Server">Accounts</string>
  <string name="ServerList">Server List</string>
  <string name="AddAServer">New Account</string>
  <string name="ModifyServerList">Modify the List</string>
  <string name="ServerDetail">Server Configuration</string>
  <string name="NewServer">New Server</string>
  <string name="NameOfTheServer">Name of the server</string>
  <string name="URLOfTheSerVer">URL of the server</string>
  <string name="CannotEditServer">The server can not be modified or deleted. It is currently in use. </string>
  <string name="English">English</string>
  <string name="French">French</string>
  <string name="German">German</string>
  <string name="Spanish">Spanish</string>
  <string name="PortugueseBrazil">Portuguese (Brazil)</string>
  <string name="Greek">Greek</string>
  <string name="CompliantMessage">We cannot connect to a compatible Platform version at this URL, please contact your administrator.</string>
  <string name="Delete">Delete</string>
  <string name="Copy">Copy</string>
  <string name="Move">Cut</string>
  <string name="Rename">Rename</string>
  <string name="CreateFolder">Create Folder</string>
  <string name="Send">Send</string>
  <string name="Paste">Paste</string>
  <string name="Cancel">Cancel</string>
  <string name="OK">OK</string>
  <string name="Remove">Remove</string>
  <string name="Documents">Documents</string>
  <string name="Dashboard">Apps</string>
  <string name="Settings">Settings</string>
  <string name="GadgetsCannotBeRetrieved">Gadgets cannot be retrieved.</string>
  <string name="ActivityStream">Activity Stream</string>
  <string name="ActivityDetail">Details</string>
  <string name="You">You</string>
  <string name="Me">Me</string>
  <string name="ShowMore">Show More</string>
  <string name="LoadingData">Loading data …</string>
  <string name="LoadingImage">Loading image …</string>
  <string name="SendingData">Sending data …</string>
  <string name="YourComment">Your comment …</string>
  <string name="Comment">Comment</string>
  <string name="StatusUpdate">Post</string>
  <string name="PostTo">To:</string>
  <string name="Public">My Activities</string>
  <string name="NoSpaces">You are not in any space</string>
  <string name="ComposerPlaceHolder">What are you working on?</string>
  <string name="ShareWithWhom">Select who will see this post</string>
  <string name="NoLike">No likes for the moment</string>
  <string name="LikedThis"> liked this</string>
  <string name="And"> and</string>
  <string name="PeoplesLikedThis"> people liked this</string>
  <string name="PeopleLikedThis"> person liked this</string>
  <string name="LessThanAMinute"> less than a minute</string>
  <string name="AboutAMinuteAgo"> about a minute ago</string>
  <string name="About"> about</string>
  <string name="MinutesAgo"> minutes ago</string>
  <string name="AboutAnHourAgo"> about an hour ago</string>
  <string name="HoursAgo"> hours ago</string>
  <string name="AboutADayAgo"> about a day ago</string>
  <string name="DaysAgo"> days ago</string>
  <string name="AboutAMonthAgo"> about a month ago</string>
  <string name="MonthsAgo"> months ago</string>
  <string name="InputTextWarning">Please, input some text.</string>
  <string name="Minute"> minute</string>
  <string name="Minutes"> minutes</string>
  <string name="Hour"> hour</string>
  <string name="Hours"> hours</string>
  <string name="Today"> today</string>
  <string name="AddAPhoto">Add a Photo</string>
  <string name="TakeAPhoto">Take a Photo</string>
  <string name="PhotoLibrary">Photo Library </string>
  <string name="SelectedPhoto">Selected Image</string>
  <string name="AttachedPhoto">Attached Photo</string>
  <string name="Warning">Warning</string>
  <string name="PostError">Error while posting an activity.</string>
  <string name="ErrorOnLike">You can not like this activity.</string>
  <string name="ConnectionError">The network can not be reached.</string>
  <string name="LoadingDataError">Error while loading data.</string>
  <string name="DoNotHavePermision">You don\'t have permission for this because no SD-card is available.</string>
  <string name="WarningServerNameIsEmpty">The account name and server can not be empty</string>
  <string name="WarningServerNameIsExist">This server name already exists in your list</string>
  <string name="WarningServerUrlIsExist">This server URL already exists in your list</string>
  <string name="WarningServerAlreadyExists">This account already exists in your list</string>
  <string name="DetailsNotAvaiable">Details of the news are not available</string>
  <string name="ErrorOnComment">You can not comment this activity.</string>
  <string name="CannotLoadMoreActivities">Cannot load older activities. The list is being refreshed.</string>
  <string name="LogoutTitle">Logout Dialog</string>
  <string name="LogoutContent">Do you want to exit?</string>
  <string name="ApplicationInformation">Application Information</string>
  <string name="ServerVersion">Server Version</string>
  <string name="ServerEdition">Server Edition</string>
  <string name="ApplicationVersion">Application Version</string>
  <string name="EmptyFolder">The content of this folder is empty</string>
  <string name="UnreachableFileTitle">Unreadable File</string>
  <string name="UnreachableFile">This file cannot be opened on the application</string>
  <string name="EmptyDashboard">You haven\'t got any gadgets on your apps</string>
  <string name="EmptyActivity">No activities have been posted on your activity stream yet</string>
  <string name="EmptyComment">No one has commented, be the first one</string>
  <string name="HasEditWikiPage"> has edited the Wiki page:</string>
  <string name="HasCreatWikiPage"> has created the Wiki page:</string>
  <string name="HasPostedAnewTopic"> has posted a new topic:</string>
  <string name="HasUpdateAnewTopic"> has updated a topic:</string>
  <string name="HasAddANewPost"> has added a new post:</string>
  <string name="HasUpdateANewPost"> has updated a post:</string>
  <string name="HasAskAnswer"> has asked:</string>
  <string name="HasUpdatedQuestion"> has updated question: </string>
  <string name="HasAnswerQuestion"> has answered the question:</string>
  <string name="AddedAnEvent"> added an event:</string>
  <string name="UpdatedAnEvent"> has just updated the event:</string>
  <string name="AddedATask"> added a task:</string>
  <string name="UpdatedATask"> has just updated the task:</string>
  <string name="DocumentRenameTitle">Rename Folder</string>
  <string name="DocumentRenameContent">Enter a new name:</string>
  <string name="DocumentCreateTitle">Create Folder</string>
  <string name="DocumentCreateContent">Enter the folder name:</string>
  <string name="DocumentCannotDelete">Can not delete this file.</string>
  <string name="DocumentCopyPasteError">Error while pasting.</string>
  <string name="DocumentUploadError">Error while uploading the file.</string>
  <string name="DocumentRenameError">Error while renaming this file.</string>
  <string name="DocumentCreateFolderError">Error while creating this folder.</string>
  <string name="DocumentFolderNameEmpty">Please input a folder name.</string>
  <string name="DocumentSettingTitle">Documents</string>
  <string name="DocumentShowPrivateDrive">Show private drive</string>
  <string name="CalendarDescription">Description:</string>
  <string name="CalendarLocation">Location:</string>
  <string name="CalendarStart">Start Time:</string>
  <string name="CalendarEnd">End Time:</string>
  <string name="In"> in</string>
  <string name="Space"> space</string>
  <string name="Personal">Personal</string>
  <string name="Group">Group</string>
  <string name="General">General</string>
  <string name="NetworkTimeout">Network connection timeout. Please try again.</string>
  <string name="Liker">Liker</string>
  <string name="Likers">Likers</string>
  <string name="NoAppFound">No application was found.</string>
  <string name="CannotOpenFile">Can not open this file.</string>
  <string name="FileNotFound">File not found.</string>
  <string name="FileNotSupported">File format not supported.</string>
  <string name="CompatibleFileSuggest">Would you like to open in an installed application?</string>
  <string name="OpenIn">Open in …</string>
  <string name="DownloadingFile">Downloading file …</string>
  <string name="SocialSettingTitle">Social</string>
  <string name="SocialSettingContent">Remember my filter</string>
  <string name="SignUp">Sign Up</string>
  <string name="LogIn">Log In</string>
  <string name="SkipStep">or skip this for now</string>
  <string name="Or">or</string>
  <string name="SliderDesc1">Activity streams</string>
  <string name="SliderDesc2">Comments and likes</string>
  <string name="SliderDesc3">Personal dashboards</string>
  <string name="SliderDesc4">Files management</string>
  <string name="YourSocialIntranet">Your social intranet</string>
  <string name="Anywhere">anywhere</string>
  <string name="Anytime">anytime</string>
  <string name="SwipeToSee">Swipe to learn more</string>
  <string name="GetStarted">Get Started</string>
  <string name="EmailSignUp">Enter your email address and Sign up:</string>
  <string name="Email">email address</string>
  <string name="CreateAccount">Create your account</string>
  <string name="InvalidEmail">Please input a valid email address</string>
  <string name="SigningUp">Signing up …</string>
  <string name="InvalidSignUp">A problem occurs with the sign up process</string>
  <string name="WrongEmailDomain">Email Domain for this account is not correct</string>
  <string name="AccountExists">An account already exists for this email, you will be redirected to the login screen.</string>
  <string name="CheckYourMailInbox">Check your email to complete your registration</string>
  <string name="ThanksForInterest">Thank you for your interest</string>
  <string name="MaxUsers">Impossible to create a new account. The maximum number of users has been reached for your intranet, please contact your administrator.</string>
  <string name="EmailSignIn">Enter your credentials and Login:</string>
  <string name="ConnectOnPremise">Connect to an On Premise Installation</string>
  <string name="ServerNotAvailable">Impossible to connect to your intranet, please check its URL or contact your administrator.</string>
  <string name="InvalidCredentials">Impossible to connect, check your username and password.</string>
  <string name="UserNameHint">username</string>
  <string name="OptionalHint">Optional</string>
  <string name="RequiredHint">Required</string>
  <string name="Account">Account</string>
  <string name="YourCredentials">Your credentials</string>
  <string name="ServerName">Server Name</string>
  <string name="ServerUrl">Server Url</string>
  <string name="ImageDesc">image description</string>
</resources>