<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/AccountListBackgroundColor">
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
        <TextView
	        android:id="@+id/account_switcher_signin_title"
	        style="@style/AccountFragmentTitleStyle"
	        android:text=""/>
        
        <Button
	        android:id="@+id/account_switcher_signin_btn"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"
	        android:text="@string/SignInInformation"
	        style="@style/AccountSwitcherSignInButtonStyle" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/account_switcher_signin_btn"
            android:layout_centerVertical="true"
            android:src="@drawable/action_bar_separator_complete"
            android:layout_marginRight="5dp"
            android:contentDescription="@string/SignInButton" />

    </RelativeLayout>


    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="10dp"
        android:textColor="#535353"
        android:textSize="@dimen/title_txt_size"
        android:textStyle="bold"
        android:text="@string/YourCredentials"/>
    
    <TableLayout style="@style/ServerSettingTableStyle"
                 android:layout_marginBottom="20dp">

    <TableRow
            style="@style/ServerSettingTableFirstRowStyle">

        <!-- 3rd row -->
        <TextView
                android:id="@+id/account_switcher_signin_user_txt"
                style="@style/ServerSettingTextViewStyle"
                android:text="@string/UserNameCellTitle"/>

        <EditText
                android:id="@+id/account_switcher_signin_user_edit_txt"
                style="@style/ServerSettingEditTextStyle"/>

    </TableRow>

    <TableRow
            style="@style/ServerSettingTableRowStyle">

        <!-- 4th row -->
        <TextView
                android:id="@+id/account_switcher_signin_pass_txt"
                style="@style/ServerSettingTextViewStyle"
                android:text="@string/PasswordCellTitle"/>

        <EditText
                android:id="@+id/account_switcher_signin_pass_edit_txt"
                style="@style/ServerSettingEditTextStyle"
                android:inputType="textPassword"/>

    </TableRow>

    </TableLayout>

</LinearLayout>
