<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textColor="#535353"
        android:textSize="@dimen/title_txt_size"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:text="@string/UserNameCellTitle"/>

    <TextView
        android:id="@+id/share_signin_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/UserNameHint"
        android:background="@drawable/compose_textfield_background"
        android:padding="@dimen/margin_m"
         />
    
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="10dp"
        android:textColor="#535353"
        android:textSize="@dimen/title_txt_size"
        android:textStyle="bold"
        android:text="@string/PasswordCellTitle"/>

    <EditText
        android:id="@+id/share_signin_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:background="@drawable/compose_textfield_background"
        android:paddingLeft="@dimen/margin_m" >
        <requestFocus />
    </EditText>

</LinearLayout>
