<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/share_account_item_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_m"
    android:padding="@dimen/margin_m"
    android:background="#fff">

    <TextView
        android:id="@+id/share_account_item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/share_account_item_icon"
        android:text="@string/Account"
        android:textColor="@android:color/primary_text_light"
        android:textSize="@dimen/text_size_large" />

    <TextView
        android:id="@+id/share_account_item_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:text="@string/UserNameHint"
        android:textColor="@android:color/primary_text_light"
        android:textSize="@dimen/text_size_large" />

    <TextView
        android:id="@+id/share_account_item_server_url"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/share_account_item_icon"
        android:layout_below="@+id/share_account_item_name"
        android:ellipsize="marquee"
        android:lines="1"
        android:text="@string/ServerUrl"
        android:textSize="@dimen/text_size_medium" />

    <ImageView
        android:id="@+id/share_account_item_icon"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="@dimen/margin_m"
        android:src="@drawable/icon_check_circle_grey"
        android:contentDescription="@string/Account" />

</RelativeLayout>